--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestJsApp",
+  "name": "nekode",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -17,7 +17,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "orm:init": "typeorm-ts-node-esm -d ./src/config/data.source.ts",
+    "m:gen": "set NODE_ENV=development&& npm run orm:init migration:generate",
+    "m:run": "set NODE_ENV=development&& npm run orm:init migration:run",
+    "m:create": "set NODE_ENV=development&& typeorm-ts-node-esm migration:create ./migrations/init",
+    "m:show": "set NODE_ENV=development&& typeorm-ts-node-esm migration:show -d ./src/config/data.source.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
@@ -25,9 +30,13 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
     "morgan": "^1.10.0",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typeorm": "^0.3.20",
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
