--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /dist
 /node_modules
 /build
+/migrations
 
 # Logs
 logs
@@ -37,6 +38,7 @@ lerna-debug.log*
 
 # dotenv environment variable files
 .env
+.development.env
 .env.development.local
 .env.test.local
 .env.production.local
