--- a/.gitignore
+++ b/.gitignore
@@ -61,5 +61,5 @@ pids
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-
-
+#lock
+package-lock.json
