--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "noFallthroughCasesInSwitch": false,
     "types": ["node", "express"],
     "typeRoots": ["/*/**/types", "./node_modules/@types"]
-  }
+  },
+  "exclude": ["node_modules", "dist"]
 }
