--- a/.development.env.example
+++ b/.development.env.example
@@ -9,3 +9,8 @@ POSTGRES_PASSWORD=
 POSTGRES_HOST=localhost
 POSTGERS_PORT=5432
 
+#MAILSERVICE
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_USER=myusername@gmail.com
+EMAIL_PASSWORD=passwordtomyemail
